@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>maven-parent-pom</artifactId>
-    <version>17.0.0-M4-SNAPSHOT</version>
+    <version>17.0.0-M5-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -126,9 +126,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${plugins.maven.surefire.version}</version>
-                <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </reporting>
